2004-04-27  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-capplet.c (gnome_wp_file_open_dialog):
	(wallpaper_properties_init): Remove the #if checks for GTK+ 2.3.0 and
	get rid of the compatibility code for building against 2.2

2004-04-24  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Use the more correct
	"Add Wallpaper" term for the file chooser window title

	Fixes #135084

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-10  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-capplet.c (gnome_wp_list_sort): Use g_utf8_collate to sort
	the descriptions, rather than a strcmp, so that we follow the locale
	settings for LC_COLLATE

	Fixes #139517

2004-04-08  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Rever the previous
	patch to Fix #135084 as it breaks string freeze

2004-04-05  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Change file chooser
	dialog title to say "Add Wallpaper" instead of "Add Wallpapers"

	Fixes #135084

2004-04-05  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-capplet.c (gnome_wp_scale_type_changed): Regenerate the
	thumbnail in the list when we change scaling type now
	(wallpaper_properties_init): Add GtkFileFilter support (needs love)
	TreeView is buggy, so we need to not set the vertical-separator
	style property for it
	* gnome-wp-item.c: Include <config.h> and <gnome.h> here
	(collect_save_options): Add a function to set all of the pixbuf options
	for the thumbnail pixbuf properly, so we can save them back out
	(gnome_wp_item_get_thumbnail): Fix up the code to
	generate the thumbnails for the list a bit, so that we have sexy
	thumbnails that look exactly like how the image would, on-screen
	Initialize all of the width/height variables to 0
	Add a new pixbuf variable for loading the original image to get the
	dimensions of it, so we can do thumbnailing more properly